--- a/global.css
+++ b/global.css
@@ -2,9 +2,16 @@ body{
 	width:100%;
 	height:100%;
 	margin:0;
+	background-color:#000;
+	color:#33b5e5;
 }
 
 .frame{
 	width : 100%;
 	height: 100%;
+	position: fixed;
 }
+
+.frame_right{ left : 100%;}
+.frame_left { right: 100%;}
+.frame_inactive{display:none;}
