--- a/global.css
+++ b/global.css
@@ -2,6 +2,7 @@ body{
 	width:100%;
 	height:100%;
 	margin:0;
+	/* Just in case! */
 	background-color:#000;
 	color:#33b5e5;
 }
@@ -9,9 +10,13 @@ body{
 .frame{
 	width : 100%;
 	height: 100%;
-	position: fixed;
 }
-
-.frame_right{ left : 100%;}
-.frame_left { right: 100%;}
+/* Used for when Javascript is not enabled */
 .frame_inactive{display:none;}
+
+.layer_plus-1{ z-index: 1; }
+.layer-0{
+	z-index: 0;
+	overflow:scroll;
+}
+.layer_minus-1{ z-index: -1;}
