--- a/_pages/about/about.css
+++ b/_pages/about/about.css
@@ -1,3 +1,53 @@
 #frame_about{
-	background:#33B5E5 url(/_pages/about/about_bg.jpg) repeat;
+	background:#33B5E5;
+	overflow:hidden;
+}
+
+#about_textbox_wrapper{
+	height: 100%;
+	width: 100%;
+	display: table;
+	z-index: 5;
+	position: relative;
+}
+
+#about_textbox{
+	color: #FFF;
+	font-family: 'Raleway', serif;
+	font-size: 18px;
+	display:table-cell;
+	vertical-align: middle;
+}#about_textbox > p{
+	margin-bottom: 0;
+	margin-top: 0;
+	text-align: center;
+}
+
+#about_textbox-paragraph{
+	width: 432px;
+	border-top: 1px #FFF solid;
+	border-bottom: 1px #FFF solid;
+	margin-left: auto;
+	margin-right: auto;
+	display: block;
+}
+
+#about-background_1{
+	position:absolute;
+	top:0;
+	width:100%;
+	height:150%;
+	background-image: url(/_pages/about/about_background_1.png);
+	background-repeat:repeat;
+	z-index:3;
+}
+
+#about-background_2{
+	position:absolute;
+	top:0;
+	width:100%;
+	height:150%;
+	background-image: url(/_pages/about/about_background_2.png);
+	background-repeat:repeat;
+	z-index:2;
 }
