--- a/_pages/home/home.css
+++ b/_pages/home/home.css
@@ -1,10 +1,38 @@
-#frame_home{	
-	/*background:url(/_pages/home/home_wallpaper.jpg);
-	background-repeat:no-repeat;
-	background-position:center;
-	-webkit-background-size: cover;
-	-moz-background-size:	 cover;
-	-o-background-size:		 cover;
-	background-size: 		 cover;*/
-	background:#606060;
+#frame_home{
+	overflow:hidden;
+}
+
+#home-textbox_wrapper{
+	width: 100%;
+	height: 100%;
+	display: table;
+	position: relative;
+	z-index:2;
+}
+#home-textbox{
+	display: table-cell;
+	vertical-align: middle;
+	width: 100%;
+	height: 100%;
+}
+#home-textbox > span{
+	color:#FFF;
+	font-size:36px;
+	text-align: center;
+	width: 100%;
+	font-family: 'Raleway', serif;
+	display: block;
+}
+#home-welcome_title{
+	font-size: 125px !important;
+	font-family: 'Raleway', serif !important;
+	font-weight:700;
+}
+
+#home_background{
+	position:absolute;
+	top:0;
+	width:100%;
+	height:150%;
+	background-image:url(/_pages/home/home_wallpaper.jpg);
 }
