--- a/_pages/projects/projects.css
+++ b/_pages/projects/projects.css
@@ -1,9 +1,52 @@
 #frame_projects{
-	background:url(/_pages/projects/projects_bg.jpg);
-	background-repeat:no-repeat;
-	background-position:center;
-	-webkit-background-size: cover;
-	-moz-background-size:	 cover;
-	-o-background-size:		 cover;
-	background-size: 		 cover;
+	background-color: #ebebeb;
+	overflow:hidden;
 }
+
+#projects-heading{
+	color:#959595;
+	color:rgba(0,0,0,0.5);
+	font-family: 'Raleway', serif;
+	font-size: 72px;
+	width:100%;
+}#projects-heading > p{
+	 font-size: 16px;
+}#projects-heading > p > a:link{
+	text-decoration:none;
+	color:#33b5e5;
+}#projects-heading > p > a:visited{
+	text-decoration:none;
+	color: #000;
+}
+
+#projects-background_1{
+	position:absolute;
+	top:0;
+	width:100%;
+	height:150%;
+	background-image: url(/_pages/projects/projects_background_1.png);
+	background-repeat:repeat;
+	z-index:3;
+}
+
+#projects-background_2{
+	position:absolute;
+	top:0;
+	float:left;
+	width:100%;
+	height:150%;
+	background-image: url(/_pages/projects/projects_background_2.png);
+	background-repeat:repeat;
+	z-index:2;
+}
+
+#projects-background_3{
+	position:absolute;
+	top:0;
+	width:100%;
+	height:150%;
+	background-image: url(/_pages/projects/projects_background_3.png);
+	background-repeat:repeat;
+	z-index:1;
+}
+
