--- a/_pages/the_grid/the_grid.css
+++ b/_pages/the_grid/the_grid.css
@@ -1,3 +1,30 @@
 #frame_the_grid{
-	background-color: #000;
+	background-color: #333;
+	overflow:hidden;
+}
+
+#the_grid-background{
+	position:absolute;
+	top:0;
+	width:100%;
+	height:150%;
+	background-image: url(/_pages/the_grid/the_grid-background.png);
+	background-repeat:repeat;
+	z-index:2;
+}
+
+#the_grid-background_2{
+	position:absolute;
+	top:0;
+	width:100%;
+	height:150%;
+	z-index:1;
+	background: rgb(17,17,17); /* Old browsers */
+	background: -moz-linear-gradient(top,  rgba(17,17,17,1) 0%, rgba(51,51,51,1) 99%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(17,17,17,1)), color-stop(99%,rgba(51,51,51,1))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  rgba(17,17,17,1) 0%,rgba(51,51,51,1) 99%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  rgba(17,17,17,1) 0%,rgba(51,51,51,1) 99%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  rgba(17,17,17,1) 0%,rgba(51,51,51,1) 99%); /* IE10+ */
+	background: linear-gradient(to bottom,  rgba(17,17,17,1) 0%,rgba(51,51,51,1) 99%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#111111', endColorstr='#333333',GradientType=0 ); /* IE6-9 */
 }
