--- a/_pages/home/home.css
+++ b/_pages/home/home.css
@@ -7,7 +7,7 @@
 	height: 100%;
 	display: table;
 	position: relative;
-	z-index:2;
+	z-index:3;
 }
 #home-textbox{
 	display: table-cell;
@@ -35,4 +35,14 @@
 	width:100%;
 	height:150%;
 	background-image:url(/_pages/home/home_wallpaper.jpg);
+}
+
+#home_background_mask{
+	position:absolute;
+	top:0;
+	width:100%;
+	height:150%;
+	background-image:url(/_pages/home/home_background_mask.png);
+	background-repeat:repeat;
+	z-index: 2;
 }
