--- a/_pages/home/home.css
+++ b/_pages/home/home.css
@@ -35,6 +35,12 @@
 	width:100%;
 	height:150%;
 	background-image:url(/_pages/home/home_wallpaper.jpg);
+	background-repeat:no-repeat;
+	background-position: center;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
 }
 
 #home_background_mask{
