--- a/global.css
+++ b/global.css
@@ -9,12 +9,10 @@ body{
 	width : 100%;
 	height: 100%;
 }
-/* Used for when Javascript is not enabled */
-.frame_inactive{display:none;}
+.frame_inactive{display:none;}/* Used for when Javascript is not enabled */
 
-.layer_plus-1{ z-index: 1; }
 .layer-0{
 	z-index: 0;
 	overflow:scroll;
+	height:100%;
 }
-.layer_minus-1{ z-index: -1;}
