--- a/_pages/home/home.css
+++ b/_pages/home/home.css
@@ -7,7 +7,7 @@
 	height: 100%;
 	display: table;
 	position: relative;
-	z-index:3;
+	z-index:4;
 }
 #home-textbox{
 	display: table-cell;
@@ -43,12 +43,9 @@
 	background-size: cover;
 }
 
-#home_background_mask{
+#home-canvas_snowstorm{
 	position:absolute;
 	top:0;
-	width:100%;
-	height:150%;
-	background-image:url(/_pages/home/home_background_mask.png);
-	background-repeat:repeat;
 	z-index: 2;
+	display: block;
 }
