--- a/_includes/navbar/navbar.css
+++ b/_includes/navbar/navbar.css
@@ -107,27 +107,27 @@
 /* Projects */
 .navbar_container-projects{
 	top:0;
-	background-color: #EFEFEF !important;
+	background-color:rgb(221,221,221) !important;
+	border-bottom:1px solid rgb(208,208,208);
 }
-
 .navbar_container-projects > #navbar_logo{
 	-webkit-filter: brightness(0);
+	transition:0;-moz-transition:0;-webkit-transition:0;-o-transition:0;
 }
 
 /* About */
 .navbar_container-about{
 	top:0;
-	background-color:rgba(0,0,0,0.25) !important;
+	background-color:rgba(0,0,0,0) !important;
 }
 .navbar_container-about > #navbar_logo{
-	-webkit-filter: drop-shadow(0px 0px 2px rgba(0,0,0,0.25));
+	-webkit-filter: brightness(10);
+	transition:0;-moz-transition:0;-webkit-transition:0;-o-transition:0;
 }
 .navbar_container-about > ul > .navbar-current_link > li{
-	color:#33B5E5 !important;
-	-webkit-filter: drop-shadow(0px 0px 2px rgba(0,0,0,0.25));
+	color:#FFF !important;
 }.navbar_container-about > ul > .navbar-current_link > li:hover{
-	color:#33B5E5 !important; 
-	-webkit-filter: drop-shadow(0px 0px 2px rgba(0,0,0,0.25));
+	color:#FFF !important;
 }
 .navbar_container-about > ul > a > li:hover {
 	color: rgba(0,0,0,0.7) !important;
