--- a/global.css
+++ b/global.css
@@ -1,18 +1,31 @@
+html{
+	min-height:600px;
+	min-width:600px;
+	overflow:hidden;
+}
+
 body{
 	width:100%;
 	height:100%;
 	margin:0;
 	color:#33b5e5;
+	overflow:hidden;
 }
 
 .frame{
 	width : 100%;
 	height: 100%;
 }
-.frame_inactive{display:none;}/* Used for when Javascript is not enabled */
+.frame_inactive{display:none;} /* Used for when Javascript is not enabled */
 
 .layer-0{
 	z-index: 0;
 	overflow:scroll;
 	height:100%;
+}.layer-0::-webkit-scrollbar{
+	display:none;
+}
+
+.inactive{
+	display:none !important;
 }
